# caty-fact-cat

./: README.md  config.py  docker-compose.yml  dockerfile  example.env  load_cron.sh  main.py  main.sh  pyproject.toml  requirements.txt
.github/workflow/: cd.yml
.github/workflows/: cd.yml  lint.yml
API/: cat_fact.py  cat_image.py  instagram.py
scripts/: main.sh
src/: main.py  utils.py
src/API/: __init__.py  cat_fact.py  cat_image.py  config.py  instagram.py
src/utils/: config.py  logging.py
