[project]
name = "caty-fact-cat"
version = "0.1.0"
description = "A fun little project that leverages multiple APIs to create an Instagram bot which posts daily cat pictures along with interesting cat facts in the captions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
